--- a/package.json
+++ b/package.json
@@ -6,25 +6,51 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "node scripts/build-exe.js"
+    "build": "node scripts/build-exe.js",
+    "test": "node scripts/test-setup.js",
+    "setup": "npm install && node scripts/test-setup.js",
+    "clean": "rimraf node_modules dist data/*.db cache/*",
+    "rebuild": "npm run clean && npm install && npm run test"
   },
   "keywords": [
     "tcg",
     "streaming",
     "overlay",
-    "obs"
+    "obs",
+    "pokemon",
+    "magic",
+    "yugioh",
+    "lorcana"
   ],
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
-    "axios": "^1.11.0",
-    "better-sqlite3": "^11.10.0",
-    "cheerio": "^1.1.2",
-    "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "axios": "^1.6.0",
+    "better-sqlite3": "^9.2.2",
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2",
+    "socket.io": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "pkg": "^5.8.1"
+    "nodemon": "^3.0.2",
+    "pkg": "^5.8.1",
+    "rimraf": "^5.0.5"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "pkg": {
+    "assets": [
+      "public/**/*",
+      "src/**/*",
+      "overlays/**/*",
+      "index.html",
+      "config.json"
+    ],
+    "targets": [
+      "node18-win-x64"
+    ],
+    "outputPath": "dist",
+    "compress": "GZip"
   }
 }
