--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.0",
     "better-sqlite3": "^9.2.2",
     "cheerio": "^1.0.0-rc.12",
+    "csv-parser": "^3.2.0",
     "express": "^4.18.2",
     "socket.io": "^4.6.0"
   },
