--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "node scripts/test-setup.js",
     "setup": "npm install && node scripts/test-setup.js",
     "clean": "rimraf node_modules dist data/*.db cache/*",
-    "rebuild": "npm run clean && npm install && npm run test"
+    "rebuild": "npm run clean && npm install && npm run test",
+    "build-css": "tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch",
+    "build-css-prod": "tailwindcss -i ./public/css/input.css -o ./public/css/style.css --minify"
   },
   "keywords": [
     "tcg",
@@ -33,9 +35,13 @@
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^4.12.10",
     "nodemon": "^3.0.2",
     "pkg": "^5.8.1",
-    "rimraf": "^5.0.5"
+    "postcss": "^8.5.6",
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=14.0.0"
